client/src/components/posts/Posts.css
.posts__container {
  margin: auto; /*1.5rem w/o nav*/
  width: 90vw;
}

.content__container {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  gap: 3rem;
}

.title__container h1 {
  font-size: 6.5rem;
  font-weight: 500;
  margin-left: 1rem;

}

/* .title__container h2 {
  font-size: 2rem;
  font-weight: 300;
  margin-right: 1rem;
} */

.content__container p {
  padding: 10vh 10vw 5vh 10vw;
  font-size: 3rem;
}

.dog-icon {
  font-size: 2rem;
}

/* ===== MEDIA QUERIES (WIDE SCREENS) */
@media screen and (min-width: 1510px) {
  .posts__container {
    margin-top: 2.5rem;
    width: 80rem;
  }

  .content__container {
    margin-top: 0;
  }

  .title__container {
    /* auto w/o nav*/
    margin-left: -1vw; /* vw for better change w/ screen size transition */
  }
}

/* ===== MEDIA QUERIES (MEDIUM DEVICES) ===== */
@media screen and (max-width: 1440px) {
  .posts__container {
    margin-top: 0;
    padding-bottom: 2rem;
  }

  .content__container {
    flex-direction: column;
    margin: 1.5rem auto auto auto;
    padding: 0;
  }

  .title__container {
    margin: auto auto auto 3vw;
  }

  .title__container h1 {
    font-weight: 500;
    font-size: 5.5rem;
    margin-top: -1.5rem;
  }

  .content__container p {
    padding: 15vh 25vw 10vh 25vw;
  }
}

/* ===== MEDIA QUERIES (SMALL DEVICES) ===== */
@media screen and (max-width: 600px) {
  .posts__container {
    width: var(--container-width-sm);
    margin: 0 auto 0.5rem auto; /*2rem w/o nav*/
    padding-bottom: 1rem;
  }

  .content__container {
    margin: auto;
    overflow-x: hidden;
    padding: 0;
    gap: 0.5rem
  }

  .title__container {
    margin: 1rem auto -1rem auto;
    text-align: center;
  }

  .title__container h1 {
    font-size: 4rem;
  }

  .title__container h2 {
    font-size: 1.5rem;
  }

  .content__container p {
    font-size: 2rem;
    padding: 15vh 15vw 10vh 25vw;
  }
}

/* ===== MEDIA QUERIES (SMALL DEVICES, LONG SCREEN) ===== */
@media screen and (max-width: 600px) and (min-height: 800px) {
  .posts__container {
    margin-top: 8vh;
  }
}

